styles/main.css
/* ... */
      #site-header .container a:hover {
        color: #444; }
        #site-header .container a:hover #menu-icon {
          z-index: 200;
          background-color: #444;
          border-radius: 4px 4px 0 0; }
    #site-header .container img {
      width: auto;
      height: 100%; }
    #site-header .container #logo {
      margin: 0 auto;
      float: left;
      width: auto;
      height: 100%; }
    #site-header .container nav {
      float: right;
      height: 100%; }
      #site-header .container nav ul {
        list-style: none;
        height: 100%;
        margin: 0;
        padding: 0; }
        #site-header .container nav ul li {
          display: inline-block;
          padding: 0 17px;
          vertical-align: middle; }
          @media screen and (max-width: 1080px) {
            #site-header .container nav ul li {
              padding: 3px 15px; } }
          @media screen and (max-width: 1024px) {
            #site-header .container nav ul li {
              padding: 3px 10px; } }
          @media screen and (max-width: 943px) {
            #site-header .container nav ul li {
              padding: 3px 5px; } }
          @media screen and (max-width: 863px) {
            #site-header .container nav ul li {
              padding: 3px 2px; } }
      #site-header .container nav #menu-icon {
        display: hidden;
        width: 50px;
        height: 50px;
        background: #ed2739 url("/images/menu-icon.png") center; }
      #site-header .container nav #register {
        color: white;
        background-color: #ed2739;
        padding: 5px 5px 3px;
        margin: 19px 0;
        border-radius: 3px; }

@media only screen and (max-width: 830px) {
  #site-header {
    position: absolute;
    height: 50px; }
    #site-header .container nav ul,
    #site-header .container nav:active ul {
      height: 0;
      display: none;
      position: absolute;
      background: #fff;
      right: 0;
      top: 50px;
      width: 100%; }
    #site-header .container nav li {
      background: white;
      text-align: center;
      width: 100%;
      padding: 5px 10px;
      margin: 0; }
      #site-header .container nav li:hover {
        background: #00b6b9; }
    #site-header #menu-icon {
      display: inline-block; } }

section.intro {
  left: 0;
  top: 0;
  background-color: #333;
  height: 100%;
  min-height: 500px;
  text-align: center;
  opacity: 0.9;
  position: relative;
  overflow: hidden;
  color: white;
  padding: 0;
  /* .keyboard-animation {
    font-family: Skynet;
    font-size: 30px;
    line-height: 90%;
    letter-spacing: 0.05em;
    padding-top: 10px;
    position: relative;
    text-align: center;
    color: #aebf9b;
    margin-left: -10px;
    .slogan-container {
      min-width: 290px;
      left: 50%;
      transform: translateX(-50%);
      top: 0px;
      position: absolute;
      .header-slogan {
            padding-top: 10px;

        color: #fff;
        background: #1daf8f;
      }
    }
  }*/ }
  section.intro .uc-intro-video {
    position: absolute;
    background-size: cover;
    min-width: auto;
    min-height: auto;
    width: 100%;
    height: 100%;
    z-index: 0;
    top: 0;
    left: 0; }
    section.intro .uc-intro-video video {
      background-size: cover;
      opacity: 1;
      min-width: 100%;
      min-height: 100%;
      width: auto;
      height: auto; }
  section.intro .video-cover {
    background-color: #333;
    position: absolute;
    background-size: cover;
    min-width: auto;
    min-height: auto;
    width: 100%;
    height: 100%;
    opacity: 0.4;
    z-index: 1; }
  section.intro .slogan-container {
    max-width: 68em;
    margin-left: auto;
    margin-right: auto;
    opacity: 0.6; }
    @media screen and (max-width: 600px) {
      section.intro .slogan-container {
        display: none; } }
    section.intro .slogan-container .header-slogan {
      margin-top: 20px;
      line-height: 30px;
      padding: 5px 20px;
      width: 80px;
      border-left: #fff solid 2px;
      color: #fff;
      text-align: center;
      display: inline-block; }
      section.intro .slogan-container .header-slogan:first-of-type {
        border: none; }
  section.intro .logo-container {
    width: 100%;
    padding: 0 30px;
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    -ms-transform: translateY(-50%) translateX(-50%);
    -webkit-transform: translateY(-50%) translateX(-50%);
    text-align: center;
    z-index: 3;
    box-sizing: border-box; }
    section.intro .logo-container .uc-logo {
      padding-top: 100px;
      display: inline-block;
      height: 60px;
      width: auto; }
      @media screen and (max-width: 600px) {
        section.intro .logo-container .uc-logo {
          height: 50px; } }
    section.intro .logo-container .uc-name {
      margin-top: 30px;
      display: block;
      color: #fff;
      font-size: 38px;
      max-width: 80%;
      margin-left: auto;
      margin-right: auto;
      font-family: "AzoSansThin","Helvetica Neue",Helvetica,Arial,sans-serif;
      font-weight: normal; }
      @media screen and (max-width: 600px) {
        section.intro .logo-container .uc-name {
          font-size: 20px;
          font-weight: bold; } }
    section.intro .logo-container .uc-title {
      margin-top: 30px; }
/* ... */

